Build docker image defined in master and push to ECR

--- a/jobs/simple-jobs.yml
+++ b/jobs/simple-jobs.yml
@@ -68,7 +68,7 @@
     scm:
       - git:
           branches:
-          - origin/ecr-switch
+          - origin/master
           url: git@github.com:CruGlobal/ecs_config.git
           wipe-workspace: false
           skip-tag: true
