Model contracts is a php app

--- a/jobs/app-jobs.yml
+++ b/jobs/app-jobs.yml
@@ -289,7 +289,7 @@
     description-intro: Builds, tests, & deploys the Voke Dashboards API docker image.
     email-recipients: josh.starcher@cru.org
     jobs:
-      - 'rails-template'
+      - 'php-template'
 
 - job-group:
     name: 'php-template'
