fix yaml for give-ep-update-db-test

--- a/jobs/ep-jobs.yml
+++ b/jobs/ep-jobs.yml
@@ -818,7 +818,6 @@
           -p ../target/ext-deployment-package-0-*.zip -d update-db;
 
     reporters:
-      - email: &typicalEmail
-          recipients: 'matt.drees@cru.org'
-          send-to-individuals: true
+      - email:
+          <<: *typicalEmail
 
