--- a/jobs/ep-jobs.yml
+++ b/jobs/ep-jobs.yml
@@ -1,4 +1,4 @@
-# Jobs that build from the develop branch and deploy to UAT
+# Jobs that build from the develop branch and deploy to UAT / Staging
 
 - job:
     name: give-ep-deploy-staging
@@ -644,6 +644,8 @@
     reporters:
       - email:
           <<: *typicalEmail
+
+# Jobs that build from the develop branch and deploy to Test
 
 - job:
     name: give-ep-deploy-test
