only trigger next job if this one succeeds

--- a/jobs/ep-jobs.yml
+++ b/jobs/ep-jobs.yml
@@ -454,6 +454,7 @@
       - trigger-parameterized-builds:
           - project: give-ep-docker-images-master
             current-parameters: true
+            condition: SUCCESS
 
 - job:
     name: give-ep-deploy-production
