Add John Plastow to WP build notifications.

--- a/jobs/app-jobs.yml
+++ b/jobs/app-jobs.yml
@@ -62,7 +62,7 @@
 - project:
     name: wordpress
     description-intro: Builds, tests, & deploys the wordpress docker image.
-    email-recipients: brian.zoetewey@ccci.org, josh.starcher@cru.org, david.sudarma@cru.org
+    email-recipients: brian.zoetewey@ccci.org, josh.starcher@cru.org, david.sudarma@cru.org, john.plastow@cru.org
     jobs:
       - 'php-template'
 
