--- a/jobs/mobile-jobs.yml
+++ b/jobs/mobile-jobs.yml
@@ -13,10 +13,10 @@
       - inject:
           properties-content: |
             #ANDROID
-            ANDROID_SDK_PATH=/Volumes/External\ HD/android-sdk-macosx
+            ANDROID_SDK_PATH=/Users/Shared/android-sdk-macosx
 
             #PATH
-            PATH=$PATH:/Users/Shared/Jenkins/.rbenv/shims:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin:/Volumes/External\ HD/android-sdk-macosx/tools:/Volumes/External\ HD/android-sdk-macosx/platform-tools
+            PATH=$PATH:/Users/jenkins/.rbenv/shims:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin:/Users/Shared/android-sdk-macosx/tools:/Users/Shared/android-sdk-macosx/platform-tools
 
             #LANGUAGE SETTINGS (Fixes Ruby issue with Fastlane)
             LANG=en_US.UTF-8
