--- a/jobs/mobile-jobs.yml
+++ b/jobs/mobile-jobs.yml
@@ -25,20 +25,8 @@
       - github:
           url: https://github.com/CruGlobal/{name}/
       - inject:
-          properties-content: |
-            #ANDROID
-            ANDROID_SDK_PATH=/Users/Shared/android-sdk-macosx
-
-            #PATH
-            PATH=$PATH:/Users/jenkins/.rbenv/shims:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin:/Users/Shared/android-sdk-macosx/tools:/Users/Shared/android-sdk-macosx/platform-tools
-
-            #LANGUAGE SETTINGS (Fixes Ruby issue with Fastlane)
-            LANG=en_US.UTF-8
-            LANGUAGE=en_US.UTF-8
-            LC_ALL=en_US.UTF-8
-
-            GIT_BRANCH=develop
-            GIT_ORIGIN_BRANCH=origin/$GIT_BRANCH
+          properties-content:
+              !include-raw: .env.mobile-jobs
     scm:
       - git:
           branches:
@@ -64,21 +52,8 @@
       - ansicolor:
           colormap: xterm
     builders:
-      - shell: |
-          #!/usr/bin/env bash
-          set +x
-          diffContent=$(git diff $GIT_ORIGIN_BRANCH^ $GIT_ORIGIN_BRANCH)
-          diffSearchString="fastlane[^/metadata]\|FASTLANE_USER\|FASTLANE_PASSWORD\|FASTLANE_DONT_STORE_PASSWORD\|FASTLANE_TEAM_ID\|CODE_SIGNING_IDENTITY\|CERT_PASSWORD\|KEYCHAIN_NAME|\KEYCHAIN_PASSWORD\|DELIVER_PASSWORD\|DELIVER_USER"
-          RED_COLOR='\033[0;31m'
-          NO_COLOR='\033[0m'
-          echo "$diffContent" | grep -q $diffSearchString
-          set -x
-          if [ $? -eq 0 ]; then
-            echo -e "$RED_COLOR" "Unfortunately you do not have permission to change build scripts. Contact your system admin if you think you should be able to run this build." "$NO_COLOR"
-            exit 1
-          else
-            exit 0
-          fi
+      - shell:
+          !include-raw: fastlane-modification-check.sh
       - shell: |
           bundle install
           bundle exec fastlane beta --env beta
@@ -118,20 +93,8 @@
       - github:
           url: https://github.com/CruGlobal/{name}/
       - inject:
-          properties-content: |
-            #ANDROID
-            ANDROID_SDK_PATH=/Users/Shared/android-sdk-macosx
-
-            #PATH
-            PATH=$PATH:/Users/jenkins/.rbenv/shims:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/bin:/Users/Shared/android-sdk-macosx/tools:/Users/Shared/android-sdk-macosx/platform-tools
-
-            #LANGUAGE SETTINGS (Fixes Ruby issue with Fastlane)
-            LANG=en_US.UTF-8
-            LANGUAGE=en_US.UTF-8
-            LC_ALL=en_US.UTF-8
-
-            GIT_BRANCH=master
-            GIT_ORIGIN_BRANCH=origin/$GIT_BRANCH
+          properties-content:
+              !include-raw: .env.mobile-jobs
     scm:
       - git:
           branches:
@@ -157,21 +120,8 @@
       - ansicolor:
           colormap: xterm
     builders:
-      - shell: |
-          #!/usr/bin/env bash
-          set +x
-          diffContent=$(git diff $GIT_ORIGIN_BRANCH^ $GIT_ORIGIN_BRANCH)
-          diffSearchString="fastlane[^/metadata]\|FASTLANE_USER\|FASTLANE_PASSWORD\|FASTLANE_DONT_STORE_PASSWORD\|FASTLANE_TEAM_ID\|CODE_SIGNING_IDENTITY\|CERT_PASSWORD\|KEYCHAIN_NAME|\KEYCHAIN_PASSWORD\|DELIVER_PASSWORD\|DELIVER_USER"
-          RED_COLOR='\033[0;31m'
-          NO_COLOR='\033[0m'
-          echo "$diffContent" | grep -q $diffSearchString
-          set -x
-          if [ $? -eq 0 ]; then
-            echo -e "$RED_COLOR" "Unfortunately you do not have permission to change build scripts. Contact your system admin if you think you should be able to run this build." "$NO_COLOR"
-            exit 1
-          else
-            exit 0
-          fi
+      - shell:
+          !include-raw: fastlane-modification-check.sh
       - shell: |
           bundle install
           bundle exec fastlane production --env production
