--- a/jobs/mobile-jobs.yml
+++ b/jobs/mobile-jobs.yml
@@ -10,6 +10,24 @@
     jobs:
         - 'mobile-group'
 
+- project:
+    name: jesus-film-android
+    description-intro: Builds, tests, & deploys the Jesus Film Android App.
+    email-recipients: michael.harrison@cru.org
+    developers:
+      - michaelharro
+      - frett
+      - bleppard
+    crashlytics-group-default: jesus-film-android-alpha
+    jobs:
+      - 'mobile-group':
+        beta_parameters:
+            - choice:
+                name: CRASHLYTICS_GROUP
+                choices: 
+                  - jesus-film-android-alpha
+                  - jesus-film-android-beta
+                description: Alias of Crashlytics group to receive beta build
 - job-group:
     name: 'mobile-group'
     jobs:
