--- a/jobs/simple-jobs.yml
+++ b/jobs/simple-jobs.yml
@@ -33,7 +33,7 @@
 - project:
     name: base-image-ruby-version-arg
     image_description: |
-      Base docker image for Ruby on Rails apps. Supports ruby versions 2.2.2, 2.3.0 and 2.3.1
+      Base docker image for Ruby on Rails apps. Supports ruby versions 2.3.4 and 2.4.1
     build_command: |
       ecs/base-image-ruby-version-arg/build_ruby_versions
     jobs:
