--- a/jobs/mobile-jobs.yml
+++ b/jobs/mobile-jobs.yml
@@ -1,3 +1,25 @@
+- defaults:
+    name: global
+    test_parameters:
+      - git:
+          name: sha1
+          description: |
+            If specified, jenkins will use this git branch to build.
+            If not, jenkins will pick a branch (between 'master' and 'staging')
+            that seems most likely to be the one you want built.
+            This is usually either the branch that has commits in it that jenkins hasn't 'seen' yet,
+            or, if there are none of those, the most recently-built branch.
+          type: branch
+          branch-filter: '.*/merge'
+          sort: 'descending'
+          default: :origin/(master|develop)
+    beta_parameters:
+      - string:
+          name: CRASHLYTICS_GROUP
+          default: '{crashlytics-group-default}'
+          description: Alias of Crashlytics group to receive beta build
+    production_parameters:
+
 - project:
     name: godtools-swift
     description-intro: Builds, tests, & deploys the New Godtools iOS App.
@@ -19,15 +41,15 @@
       - frett
       - bleppard
     crashlytics-group-default: jesus-film-android-alpha
+    beta_parameters:
+        - choice:
+            name: CRASHLYTICS_GROUP
+            choices: 
+                - jesus-film-android-alpha
+                - jesus-film-android-beta
+            description: Alias of Crashlytics group to receive beta build
     jobs:
-      - 'mobile-group':
-        beta_parameters:
-            - choice:
-                name: CRASHLYTICS_GROUP
-                choices: 
-                  - jesus-film-android-alpha
-                  - jesus-film-android-beta
-                description: Alias of Crashlytics group to receive beta build
+      - 'mobile-group'
 
 - project:
     name: jesus-film-ios
@@ -38,50 +60,50 @@
       - charliepixegon
       - mresimont
     crashlytics-group-default: jesus-film-ios-alpha
+    test_parameters:
+        - git:
+            name: sha1
+            description: |
+                If specified, jenkins will use this git branch to build.
+                If not, jenkins will pick a branch (between 'master' and 'staging')
+                that seems most likely to be the one you want built.
+                This is usually either the branch that has commits in it that jenkins hasn't 'seen' yet,
+                or, if there are none of those, the most recently-built branch.
+            type: branch
+            branch-filter: '.*/merge'
+            sort: 'descending'
+            default: :origin/(master|develop)
+        - string:
+            name: ARCLIGHT_URL
+            default: 'https://api.arclight.org'
+            description: URL of arclight server for app to point at
+    beta_parameters:
+        - choice:
+            name: CRASHLYTICS_GROUP
+            choices: 
+                - jesus-film-ios-alpha
+                - jesus-film-ios-beta
+            description: Alias of Crashlytics group to receive beta build
+        - choice:
+            name: ARCLIGHT_URL
+            choices: 
+                - https://api.arclight.org
+                - https://preprod.arclight.org
+                - http://qa.jfpmedia.com
+            description: URL of arclight server for app to point at
+        - choice:
+            name: PARSE_URL
+            choices: 
+                - https://parse.arclight.org:1337/parse
+                - https://parse.arclight.org:1338/parse
+            description: URL of parse server for app to point at. Production = 1337. Test = 1338.
+    production_parameters:
+        - string:
+            name: ARCLIGHT_URL
+            default: 'https://api.arclight.org'
+            description: Do not change!
     jobs:
-      - 'mobile-group':
-        test_parameters:
-            - git:
-                name: sha1
-                description: |
-                  If specified, jenkins will use this git branch to build.
-                  If not, jenkins will pick a branch (between 'master' and 'staging')
-                  that seems most likely to be the one you want built.
-                  This is usually either the branch that has commits in it that jenkins hasn't 'seen' yet,
-                  or, if there are none of those, the most recently-built branch.
-                type: branch
-                branch-filter: '.*/merge'
-                sort: 'descending'
-                default: :origin/(master|develop)
-            - string:
-                name: ARCLIGHT_URL
-                default: 'https://api.arclight.org'
-                description: URL of arclight server for app to point at
-        beta_parameters:
-            - choice:
-                name: CRASHLYTICS_GROUP
-                choices: 
-                  - jesus-film-ios-alpha
-                  - jesus-film-ios-beta
-                description: Alias of Crashlytics group to receive beta build
-            - choice:
-                name: ARCLIGHT_URL
-                choices: 
-                  - https://api.arclight.org
-                  - https://preprod.arclight.org
-                  - http://qa.jfpmedia.com
-                description: URL of arclight server for app to point at
-            - choice:
-                name: PARSE_URL
-                choices: 
-                  - https://parse.arclight.org:1337/parse
-                  - https://parse.arclight.org:1338/parse
-                description: URL of parse server for app to point at. Production = 1337. Test = 1338.
-        production_parameters:
-            - string:
-                name: ARCLIGHT_URL
-                default: 'https://api.arclight.org'
-                description: Do not change!
+      - 'mobile-group'
 
 
 
@@ -102,19 +124,6 @@
       {description-intro}
 
       Runs tests when pull requests are created. The results are reported on the PR.
-    test_parameters:
-      - git:
-          name: sha1
-          description: |
-            If specified, jenkins will use this git branch to build.
-            If not, jenkins will pick a branch (between 'master' and 'staging')
-            that seems most likely to be the one you want built.
-            This is usually either the branch that has commits in it that jenkins hasn't 'seen' yet,
-            or, if there are none of those, the most recently-built branch.
-          type: branch
-          branch-filter: '.*/merge'
-          sort: 'descending'
-          default: :origin/(master|develop)
     parameters: '{obj:test_parameters}'
     properties:
       - github:
@@ -195,11 +204,6 @@
       {description-intro}
 
       Runs when pull requests are submitted to develop branch. If building and testing is successful the app will be deployed to crashlytics for beta testing.
-    beta_parameters:
-      - string:
-          name: CRASHLYTICS_GROUP
-          default: '{crashlytics-group-default}'
-          description: Alias of Crashlytics group to receive beta build
     parameters: '{obj:beta_parameters}'
     properties:
       - github:
@@ -269,7 +273,6 @@
       {description-intro}
 
       Runs when pull requests are submitted to master branch. If building and testing is successful the app will be deployed to the appstore/playstore for you to review prior to submitting the app.
-    production_parameters:
     parameters: '{obj:production_parameters}'
     properties:
       - github:
