--- a/jobs/mobile-jobs.yml
+++ b/jobs/mobile-jobs.yml
@@ -1,5 +1,6 @@
 - defaults:
     name: global
+    config_modification_check_script: !include-raw: fastlane-modification-check.sh
     test_parameters:
       - git:
           name: sha1
@@ -25,6 +26,7 @@
     description-intro: Builds, tests, & deploys the New Godtools iOS App.
     email-recipients: michael.harrison@cru.org
     crashlytics-group-default: god-tools-ios
+    config_modification_check_script: 'echo "No check required"'
     developers:
         - michaelharro
         - ryancarlson
@@ -41,10 +43,11 @@
       - frett
       - bleppard
     crashlytics-group-default: jesus-film-android-alpha
+    config_modification_check_script: 'echo "No check required"'
     beta_parameters:
         - choice:
             name: CRASHLYTICS_GROUP
-            choices: 
+            choices:
                 - jesus-film-android-alpha
                 - jesus-film-android-beta
             description: Alias of Crashlytics group to receive beta build
@@ -60,6 +63,7 @@
       - charliepixegon
       - mresimont
     crashlytics-group-default: jesus-film-ios-alpha
+    config_modification_check_script: 'echo "No check required"'
     test_parameters:
         - git:
             name: sha1
@@ -80,20 +84,20 @@
     beta_parameters:
         - choice:
             name: CRASHLYTICS_GROUP
-            choices: 
+            choices:
                 - jesus-film-ios-alpha
                 - jesus-film-ios-beta
             description: Alias of Crashlytics group to receive beta build
         - choice:
             name: ARCLIGHT_URL
-            choices: 
+            choices:
                 - https://api.arclight.org
                 - https://preprod.arclight.org
                 - http://qa.jfpmedia.com
             description: URL of arclight server for app to point at
         - choice:
             name: PARSE_URL
-            choices: 
+            choices:
                 - https://parse.arclight.org:1337/parse
                 - https://parse.arclight.org:1338/parse
             description: URL of parse server for app to point at. Production = 1337. Test = 1338.
@@ -179,8 +183,7 @@
       - ansicolor:
           colormap: xterm
     builders:
-      - shell:
-          !include-raw: fastlane-modification-check.sh
+      - shell: '{config_modification_check_script}'
       - shell: |
           bundle install
           bundle exec fastlane run_tests --env tests
@@ -260,8 +263,7 @@
       - ansicolor:
           colormap: xterm
     builders:
-      - shell:
-          !include-raw: fastlane-modification-check.sh
+      - shell: '{config_modification_check_script}'
       - shell: |
           bundle install
           bundle exec fastlane beta --env beta
@@ -341,8 +343,7 @@
       - ansicolor:
           colormap: xterm
     builders:
-      - shell:
-          !include-raw: fastlane-modification-check.sh
+      - shell: '{config_modification_check_script}'
       - shell: |
           bundle install
           bundle exec fastlane production --env production
